showcase/showcaseStyles.css
/* ------------------------------------------------------------------------------ */
/* -------------------------------Showcase Styles-------------------------------- */
/* ------------------------------------------------------------------------------ */


body 
{
  font-family: Arial, sans-serif;
  background-color: black;
  color: #222;
  line-height: 1.6;
}

/* Container for all projects */
.projects 
{
  margin: 0 auto;
  padding-bottom: 10px;
  padding-right: 15px;
  padding-left: 15px;
}

/* Each project section */
.project 
{
  display: flex;
  margin-bottom: 30px;
  margin-top: 10px;
}

.projectReversed
{
  display: flex;
  margin-bottom: 50px;
  margin-top: 50px;
  flex-direction: row-reverse;
}

/* Text area */
.project-text 
{
  font-family: 'CascadiaMono';
  flex: 1;
  margin-left: 0.3vw;
  margin-right: 0.3vw;
}

.project-text .gameDescriptionImage 
{
  width: 28%;
}

.project-text .image-row 
{
  display: flex;
  justify-content: center;
  gap: 2rem;
  width: 100%;
  box-sizing: border-box;
}

.project-text h2 
{
  font-family: 'CascadiaMono';
  color: white;
  margin-bottom: 10px;
  margin-top:  0;;
  font-size: 2vw;
}
.project-text p 
{
  font-size: 1vw;
  color: white;
}

/* Video container */
.project-video 
{
  margin-left: 30px;
  margin-right: 30px;
  flex: 1;
  margin-bottom: 10px;
}
.project-video iframe 
{
  height: calc(13.6vw + 32vh); /* Adjust height dynamically based on content */
  width: 100%;
  border: none;
  margin-bottom: 20px;
}

/* Responsive adjustments */
@media (max-width: 1000px) 
{
  .project 
  {
    flex-direction: column;
  }
  .projectReversed 
  {
    flex-direction: column;
  }
  .project-video 
  {
    height: 250px;
  }
  .project-text h2 
  {
    font-size: 24px;
  }
  .project-text p 
  {
    font-size: 16px;
  }
}

